Phase II (K132185 and K132095)/parser.output
Terminals unused in grammar

   NotEqualTo
   '-'
   '+'
   '*'
   '/'
   '^'


State 226 conflicts: 1 shift/reduce


Grammar

    0 $accept: TransitionUnit $end

    1 TransitionUnit: ExternalDeclaration TransitionUnit_a

    2 TransitionUnit_a: /* empty */
    3                 | ExternalDeclaration TransitionUnit_a

    4 ExternalDeclaration: FunctionDefinition
    5                    | Declaration

    6 FunctionDefinition: TypeSpecifier Declarator FunctionDefinition_a
    7                   | Declarator FunctionDefinition_b

    8 FunctionDefinition_a: DeclarationList CompoundStatement
    9                     | CompoundStatement

   10 FunctionDefinition_b: DeclarationList CompoundStatement
   11                     | CompoundStatement

   12 TypeSpecifier: VOID
   13              | CHAR
   14              | INT
   15              | FLOAT

   16 Declarator: DirectDeclarator
   17           | Pointer DirectDeclarator

   18 $@1: /* empty */

   19 DirectDeclarator: Identifier $@1 DirectDeclarator_a

   20 DirectDeclarator_a: /* empty */
   21                   | OpeningRoundBracket DirectDeclarator_b
   22                   | OpeningSquareBracket DirectDeclarator_c

   23 DirectDeclarator_b: Declarator ClosingRoundBracket DirectDeclarator_a

   24 $@2: /* empty */

   25 DirectDeclarator_b: $@2 ParameterList ClosingRoundBracket DirectDeclarator_a
   26                   | ClosingRoundBracket DirectDeclarator_a

   27 DirectDeclarator_c: ClosingSquareBracket DirectDeclarator_a

   28 $@3: /* empty */

   29 DirectDeclarator_c: Integer ClosingSquareBracket $@3 DirectDeclarator_a

   30 Pointer: Multiply Pointer_a

   31 Pointer_a: /* empty */
   32          | Pointer

   33 DeclarationList: Declaration DeclarationList_a

   34 DeclarationList_a: /* empty */
   35                  | Declaration DeclarationList_a

   36 Declaration: TypeSpecifier Declaration_a EndOfStatement

   37 Declaration_a: /* empty */
   38              | InitDeclaratorList

   39 InitDeclaratorList: InitDeclarator
   40                   | InitDeclaratorList Comma InitDeclarator

   41 InitDeclarator: Declarator
   42               | Declarator Assign Initializer

   43 Initializer: AssignmentExpression
   44            | OpeningBraces InitializerList ClosingBraces

   45 InitializerList: Initializer

   46 $@4: /* empty */

   47 InitializerList: InitializerList Comma $@4 Initializer

   48 ParameterList: ParameterDeclaration ParameterList_a

   49 ParameterList_a: /* empty */
   50                | Comma ParameterDeclaration ParameterList_a

   51 $@5: /* empty */

   52 ParameterDeclaration: TypeSpecifier $@5 ParameterDeclaration_a

   53 ParameterDeclaration_a: /* empty */
   54                       | Declarator

   55 CompoundStatement: OpeningBraces ClosingBraces
   56                  | OpeningBraces StatementList ClosingBraces
   57                  | OpeningBraces DeclarationList ClosingBraces
   58                  | OpeningBraces DeclarationList StatementList ClosingBraces

   59 StatementList: Statement StatementList_a

   60 StatementList_a: /* empty */
   61                | Statement StatementList_a

   62 Statement: LabeledStatement
   63          | CompoundStatement
   64          | ExpressionStatement
   65          | SelectionStatement
   66          | IterationStatement
   67          | JumpStatement

   68 LabeledStatement: CASE Constant Colon Statement
   69                 | DEFAULT Colon Statement

   70 ExpressionStatement: EndOfStatement
   71                    | Expression EndOfStatement

   72 SelectionStatement: IF OpeningRoundBracket Expression ClosingRoundBracket Statement SelectionStatement_a

   73 SelectionStatement_a: /* empty */
   74                     | ELSE Statement

   75 SelectionStatement: SWITCH OpeningRoundBracket Expression ClosingRoundBracket Statement

   76 JumpStatement: CONTINUE EndOfStatement
   77              | BREAK EndOfStatement
   78              | RETURN JumpStatement_a

   79 JumpStatement_a: Expression EndOfStatement

   80 IterationStatement: WHILE OpeningRoundBracket Expression ClosingRoundBracket Statement
   81                   | DO Statement WHILE OpeningRoundBracket Expression ClosingRoundBracket EndOfStatement
   82                   | FOR OpeningRoundBracket ExpressionStatement ExpressionStatement ClosingRoundBracket Statement
   83                   | FOR OpeningRoundBracket ExpressionStatement ExpressionStatement Expression ClosingRoundBracket Statement

   84 ConditionalExpression: EqualityExpression ConditionalExpression_a

   85 ConditionalExpression_a: /* empty */
   86                        | ConditionalOperator Expression Colon ConditionalExpression

   87 Expression: AssignmentExpression Expression_a

   88 Expression_a: /* empty */
   89             | Comma AssignmentExpression Expression_a

   90 AssignmentExpression: ConditionalExpression
   91                     | UnaryExpression AssignmentOperator AssignmentExpression

   92 EqualityExpression: RelationalExpression EqualityExpression_a

   93 EqualityExpression_a: /* empty */
   94                     | IsEqualTo RelationalExpression EqualityExpression_a

   95 RelationalExpression: AdditiveExpression RelationalExpression_a

   96 RelationalExpression_a: /* empty */
   97                       | LessThan AdditiveExpression RelationalExpression_a
   98                       | GreaterThan AdditiveExpression RelationalExpression_a
   99                       | LessThanEqualTo AdditiveExpression RelationalExpression_a
  100                       | GreaterThanEqualTo AdditiveExpression RelationalExpression_a

  101 AdditiveExpression: MultiplicativeExpression AdditiveExpression_a

  102 AdditiveExpression_a: /* empty */
  103                     | Add MultiplicativeExpression AdditiveExpression_a
  104                     | Subtract MultiplicativeExpression AdditiveExpression_a

  105 MultiplicativeExpression: UnaryExpression MultiplicativeExpression_a

  106 MultiplicativeExpression_a: /* empty */
  107                           | Multiply UnaryExpression MultiplicativeExpression_a
  108                           | Divide UnaryExpression MultiplicativeExpression_a
  109                           | Modulus UnaryExpression MultiplicativeExpression_a

  110 AssignmentOperator: Assign
  111                   | AddAndAssign
  112                   | SubtractAndAssign
  113                   | MultiplyAndAssign
  114                   | DivideAndAssign

  115 Constant: Integer
  116         | Character
  117         | Real

  118 UnaryExpression: PostFixExpression
  119                | Increment UnaryExpression
  120                | Decrement UnaryExpression

  121 PostFixExpression: PrimaryExpression PostFixExpression_a

  122 PostFixExpression_a: /* empty */
  123                    | OpeningSquareBracket Expression ClosingSquareBracket PostFixExpression_a
  124                    | OpeningRoundBracket PostFixExpression_b
  125                    | Increment PostFixExpression_a
  126                    | Decrement PostFixExpression_a

  127 PostFixExpression_b: ArgumentExpressionList ClosingRoundBracket PostFixExpression_a
  128                    | ClosingRoundBracket PostFixExpression_a

  129 ArgumentExpressionList: AssignmentExpression
  130                       | ArgumentExpressionList Comma AssignmentExpression

  131 PrimaryExpression: Identifier
  132                  | Constant
  133                  | String
  134                  | OpeningRoundBracket Expression ClosingRoundBracket


Terminals, with rules where they appear

$end (0) 0
'*' (42)
'+' (43)
'-' (45)
'/' (47)
'^' (94)
error (256)
Integer (258) 29 115
Identifier (259) 19 131
VOID (260) 12
CHAR (261) 13
INT (262) 14
FLOAT (263) 15
Character (264) 116
Real (265) 117
String (266) 133
Subtract (267) 104
Add (268) 103
Multiply (269) 30 107
Divide (270) 108
Modulus (271) 109
Assign (272) 42 110
AddAndAssign (273) 111
MultiplyAndAssign (274) 113
DivideAndAssign (275) 114
SubtractAndAssign (276) 112
BREAK (277) 77
CASE (278) 68
CONTINUE (279) 76
DEFAULT (280) 69
DO (281) 81
ELSE (282) 74
IF (283) 72
FOR (284) 82 83
WHILE (285) 80 81
RETURN (286) 78
SWITCH (287) 75
Colon (288) 68 69 86
Comma (289) 40 47 50 89 130
EndOfStatement (290) 36 70 71 76 77 79 81
ConditionalOperator (291) 86
ClosingBraces (292) 44 55 56 57 58
ClosingRoundBracket (293) 23 25 26 72 75 80 81 82 83 127 128 134
ClosingSquareBracket (294) 27 29 123
OpeningBraces (295) 44 55 56 57 58
OpeningRoundBracket (296) 21 72 75 80 81 82 83 124 134
OpeningSquareBracket (297) 22 123
Increment (298) 119 125
Decrement (299) 120 126
LessThan (300) 97
GreaterThan (301) 98
LessThanEqualTo (302) 99
GreaterThanEqualTo (303) 100
IsEqualTo (304) 94
NotEqualTo (305)


Nonterminals, with rules where they appear

$accept (56)
    on left: 0
TransitionUnit (57)
    on left: 1, on right: 0
TransitionUnit_a (58)
    on left: 2 3, on right: 1 3
ExternalDeclaration (59)
    on left: 4 5, on right: 1 3
FunctionDefinition (60)
    on left: 6 7, on right: 4
FunctionDefinition_a (61)
    on left: 8 9, on right: 6
FunctionDefinition_b (62)
    on left: 10 11, on right: 7
TypeSpecifier (63)
    on left: 12 13 14 15, on right: 6 36 52
Declarator (64)
    on left: 16 17, on right: 6 7 23 41 42 54
DirectDeclarator (65)
    on left: 19, on right: 16 17
$@1 (66)
    on left: 18, on right: 19
DirectDeclarator_a (67)
    on left: 20 21 22, on right: 19 23 25 26 27 29
DirectDeclarator_b (68)
    on left: 23 25 26, on right: 21
$@2 (69)
    on left: 24, on right: 25
DirectDeclarator_c (70)
    on left: 27 29, on right: 22
$@3 (71)
    on left: 28, on right: 29
Pointer (72)
    on left: 30, on right: 17 32
Pointer_a (73)
    on left: 31 32, on right: 30
DeclarationList (74)
    on left: 33, on right: 8 10 57 58
DeclarationList_a (75)
    on left: 34 35, on right: 33 35
Declaration (76)
    on left: 36, on right: 5 33 35
Declaration_a (77)
    on left: 37 38, on right: 36
InitDeclaratorList (78)
    on left: 39 40, on right: 38 40
InitDeclarator (79)
    on left: 41 42, on right: 39 40
Initializer (80)
    on left: 43 44, on right: 42 45 47
InitializerList (81)
    on left: 45 47, on right: 44 47
$@4 (82)
    on left: 46, on right: 47
ParameterList (83)
    on left: 48, on right: 25
ParameterList_a (84)
    on left: 49 50, on right: 48 50
ParameterDeclaration (85)
    on left: 52, on right: 48 50
$@5 (86)
    on left: 51, on right: 52
ParameterDeclaration_a (87)
    on left: 53 54, on right: 52
CompoundStatement (88)
    on left: 55 56 57 58, on right: 8 9 10 11 63
StatementList (89)
    on left: 59, on right: 56 58
StatementList_a (90)
    on left: 60 61, on right: 59 61
Statement (91)
    on left: 62 63 64 65 66 67, on right: 59 61 68 69 72 74 75 80 81
    82 83
LabeledStatement (92)
    on left: 68 69, on right: 62
ExpressionStatement (93)
    on left: 70 71, on right: 64 82 83
SelectionStatement (94)
    on left: 72 75, on right: 65
SelectionStatement_a (95)
    on left: 73 74, on right: 72
JumpStatement (96)
    on left: 76 77 78, on right: 67
JumpStatement_a (97)
    on left: 79, on right: 78
IterationStatement (98)
    on left: 80 81 82 83, on right: 66
ConditionalExpression (99)
    on left: 84, on right: 86 90
ConditionalExpression_a (100)
    on left: 85 86, on right: 84
Expression (101)
    on left: 87, on right: 71 72 75 79 80 81 83 86 123 134
Expression_a (102)
    on left: 88 89, on right: 87 89
AssignmentExpression (103)
    on left: 90 91, on right: 43 87 89 91 129 130
EqualityExpression (104)
    on left: 92, on right: 84
EqualityExpression_a (105)
    on left: 93 94, on right: 92 94
RelationalExpression (106)
    on left: 95, on right: 92 94
RelationalExpression_a (107)
    on left: 96 97 98 99 100, on right: 95 97 98 99 100
AdditiveExpression (108)
    on left: 101, on right: 95 97 98 99 100
AdditiveExpression_a (109)
    on left: 102 103 104, on right: 101 103 104
MultiplicativeExpression (110)
    on left: 105, on right: 101 103 104
MultiplicativeExpression_a (111)
    on left: 106 107 108 109, on right: 105 107 108 109
AssignmentOperator (112)
    on left: 110 111 112 113 114, on right: 91
Constant (113)
    on left: 115 116 117, on right: 68 132
UnaryExpression (114)
    on left: 118 119 120, on right: 91 105 107 108 109 119 120
PostFixExpression (115)
    on left: 121, on right: 118
PostFixExpression_a (116)
    on left: 122 123 124 125 126, on right: 121 123 125 126 127 128
PostFixExpression_b (117)
    on left: 127 128, on right: 124
ArgumentExpressionList (118)
    on left: 129 130, on right: 127 130
PrimaryExpression (119)
    on left: 131 132 133 134, on right: 121


state 0

    0 $accept: . TransitionUnit $end

    Identifier  shift, and go to state 1
    VOID        shift, and go to state 2
    CHAR        shift, and go to state 3
    INT         shift, and go to state 4
    FLOAT       shift, and go to state 5
    Multiply    shift, and go to state 6

    TransitionUnit       go to state 7
    ExternalDeclaration  go to state 8
    FunctionDefinition   go to state 9
    TypeSpecifier        go to state 10
    Declarator           go to state 11
    DirectDeclarator     go to state 12
    Pointer              go to state 13
    Declaration          go to state 14


state 1

   19 DirectDeclarator: Identifier . $@1 DirectDeclarator_a

    $default  reduce using rule 18 ($@1)

    $@1  go to state 15


state 2

   12 TypeSpecifier: VOID .

    $default  reduce using rule 12 (TypeSpecifier)


state 3

   13 TypeSpecifier: CHAR .

    $default  reduce using rule 13 (TypeSpecifier)


state 4

   14 TypeSpecifier: INT .

    $default  reduce using rule 14 (TypeSpecifier)


state 5

   15 TypeSpecifier: FLOAT .

    $default  reduce using rule 15 (TypeSpecifier)


state 6

   30 Pointer: Multiply . Pointer_a

    Multiply  shift, and go to state 6

    $default  reduce using rule 31 (Pointer_a)

    Pointer    go to state 16
    Pointer_a  go to state 17


state 7

    0 $accept: TransitionUnit . $end

    $end  shift, and go to state 18


state 8

    1 TransitionUnit: ExternalDeclaration . TransitionUnit_a

    Identifier  shift, and go to state 1
    VOID        shift, and go to state 2
    CHAR        shift, and go to state 3
    INT         shift, and go to state 4
    FLOAT       shift, and go to state 5
    Multiply    shift, and go to state 6

    $default  reduce using rule 2 (TransitionUnit_a)

    TransitionUnit_a     go to state 19
    ExternalDeclaration  go to state 20
    FunctionDefinition   go to state 9
    TypeSpecifier        go to state 10
    Declarator           go to state 11
    DirectDeclarator     go to state 12
    Pointer              go to state 13
    Declaration          go to state 14


state 9

    4 ExternalDeclaration: FunctionDefinition .

    $default  reduce using rule 4 (ExternalDeclaration)


state 10

    6 FunctionDefinition: TypeSpecifier . Declarator FunctionDefinition_a
   36 Declaration: TypeSpecifier . Declaration_a EndOfStatement

    Identifier  shift, and go to state 1
    Multiply    shift, and go to state 6

    $default  reduce using rule 37 (Declaration_a)

    Declarator          go to state 21
    DirectDeclarator    go to state 12
    Pointer             go to state 13
    Declaration_a       go to state 22
    InitDeclaratorList  go to state 23
    InitDeclarator      go to state 24


state 11

    7 FunctionDefinition: Declarator . FunctionDefinition_b

    VOID           shift, and go to state 2
    CHAR           shift, and go to state 3
    INT            shift, and go to state 4
    FLOAT          shift, and go to state 5
    OpeningBraces  shift, and go to state 25

    FunctionDefinition_b  go to state 26
    TypeSpecifier         go to state 27
    DeclarationList       go to state 28
    Declaration           go to state 29
    CompoundStatement     go to state 30


state 12

   16 Declarator: DirectDeclarator .

    $default  reduce using rule 16 (Declarator)


state 13

   17 Declarator: Pointer . DirectDeclarator

    Identifier  shift, and go to state 1

    DirectDeclarator  go to state 31


state 14

    5 ExternalDeclaration: Declaration .

    $default  reduce using rule 5 (ExternalDeclaration)


state 15

   19 DirectDeclarator: Identifier $@1 . DirectDeclarator_a

    OpeningRoundBracket   shift, and go to state 32
    OpeningSquareBracket  shift, and go to state 33

    $default  reduce using rule 20 (DirectDeclarator_a)

    DirectDeclarator_a  go to state 34


state 16

   32 Pointer_a: Pointer .

    $default  reduce using rule 32 (Pointer_a)


state 17

   30 Pointer: Multiply Pointer_a .

    $default  reduce using rule 30 (Pointer)


state 18

    0 $accept: TransitionUnit $end .

    $default  accept


state 19

    1 TransitionUnit: ExternalDeclaration TransitionUnit_a .

    $default  reduce using rule 1 (TransitionUnit)


state 20

    3 TransitionUnit_a: ExternalDeclaration . TransitionUnit_a

    Identifier  shift, and go to state 1
    VOID        shift, and go to state 2
    CHAR        shift, and go to state 3
    INT         shift, and go to state 4
    FLOAT       shift, and go to state 5
    Multiply    shift, and go to state 6

    $default  reduce using rule 2 (TransitionUnit_a)

    TransitionUnit_a     go to state 35
    ExternalDeclaration  go to state 20
    FunctionDefinition   go to state 9
    TypeSpecifier        go to state 10
    Declarator           go to state 11
    DirectDeclarator     go to state 12
    Pointer              go to state 13
    Declaration          go to state 14


state 21

    6 FunctionDefinition: TypeSpecifier Declarator . FunctionDefinition_a
   41 InitDeclarator: Declarator .
   42               | Declarator . Assign Initializer

    VOID           shift, and go to state 2
    CHAR           shift, and go to state 3
    INT            shift, and go to state 4
    FLOAT          shift, and go to state 5
    Assign         shift, and go to state 36
    OpeningBraces  shift, and go to state 25

    $default  reduce using rule 41 (InitDeclarator)

    FunctionDefinition_a  go to state 37
    TypeSpecifier         go to state 27
    DeclarationList       go to state 38
    Declaration           go to state 29
    CompoundStatement     go to state 39


state 22

   36 Declaration: TypeSpecifier Declaration_a . EndOfStatement

    EndOfStatement  shift, and go to state 40


state 23

   38 Declaration_a: InitDeclaratorList .
   40 InitDeclaratorList: InitDeclaratorList . Comma InitDeclarator

    Comma  shift, and go to state 41

    $default  reduce using rule 38 (Declaration_a)


state 24

   39 InitDeclaratorList: InitDeclarator .

    $default  reduce using rule 39 (InitDeclaratorList)


state 25

   55 CompoundStatement: OpeningBraces . ClosingBraces
   56                  | OpeningBraces . StatementList ClosingBraces
   57                  | OpeningBraces . DeclarationList ClosingBraces
   58                  | OpeningBraces . DeclarationList StatementList ClosingBraces

    Integer              shift, and go to state 42
    Identifier           shift, and go to state 43
    VOID                 shift, and go to state 2
    CHAR                 shift, and go to state 3
    INT                  shift, and go to state 4
    FLOAT                shift, and go to state 5
    Character            shift, and go to state 44
    Real                 shift, and go to state 45
    String               shift, and go to state 46
    BREAK                shift, and go to state 47
    CASE                 shift, and go to state 48
    CONTINUE             shift, and go to state 49
    DEFAULT              shift, and go to state 50
    DO                   shift, and go to state 51
    IF                   shift, and go to state 52
    FOR                  shift, and go to state 53
    WHILE                shift, and go to state 54
    RETURN               shift, and go to state 55
    SWITCH               shift, and go to state 56
    EndOfStatement       shift, and go to state 57
    ClosingBraces        shift, and go to state 58
    OpeningBraces        shift, and go to state 25
    OpeningRoundBracket  shift, and go to state 59
    Increment            shift, and go to state 60
    Decrement            shift, and go to state 61

    TypeSpecifier             go to state 27
    DeclarationList           go to state 62
    Declaration               go to state 29
    CompoundStatement         go to state 63
    StatementList             go to state 64
    Statement                 go to state 65
    LabeledStatement          go to state 66
    ExpressionStatement       go to state 67
    SelectionStatement        go to state 68
    JumpStatement             go to state 69
    IterationStatement        go to state 70
    ConditionalExpression     go to state 71
    Expression                go to state 72
    AssignmentExpression      go to state 73
    EqualityExpression        go to state 74
    RelationalExpression      go to state 75
    AdditiveExpression        go to state 76
    MultiplicativeExpression  go to state 77
    Constant                  go to state 78
    UnaryExpression           go to state 79
    PostFixExpression         go to state 80
    PrimaryExpression         go to state 81


state 26

    7 FunctionDefinition: Declarator FunctionDefinition_b .

    $default  reduce using rule 7 (FunctionDefinition)


state 27

   36 Declaration: TypeSpecifier . Declaration_a EndOfStatement

    Identifier  shift, and go to state 1
    Multiply    shift, and go to state 6

    $default  reduce using rule 37 (Declaration_a)

    Declarator          go to state 82
    DirectDeclarator    go to state 12
    Pointer             go to state 13
    Declaration_a       go to state 22
    InitDeclaratorList  go to state 23
    InitDeclarator      go to state 24


state 28

   10 FunctionDefinition_b: DeclarationList . CompoundStatement

    OpeningBraces  shift, and go to state 25

    CompoundStatement  go to state 83


state 29

   33 DeclarationList: Declaration . DeclarationList_a

    VOID   shift, and go to state 2
    CHAR   shift, and go to state 3
    INT    shift, and go to state 4
    FLOAT  shift, and go to state 5

    $default  reduce using rule 34 (DeclarationList_a)

    TypeSpecifier      go to state 27
    DeclarationList_a  go to state 84
    Declaration        go to state 85


state 30

   11 FunctionDefinition_b: CompoundStatement .

    $default  reduce using rule 11 (FunctionDefinition_b)


state 31

   17 Declarator: Pointer DirectDeclarator .

    $default  reduce using rule 17 (Declarator)


state 32

   21 DirectDeclarator_a: OpeningRoundBracket . DirectDeclarator_b

    Identifier           shift, and go to state 1
    Multiply             shift, and go to state 6
    ClosingRoundBracket  shift, and go to state 86

    $default  reduce using rule 24 ($@2)

    Declarator          go to state 87
    DirectDeclarator    go to state 12
    DirectDeclarator_b  go to state 88
    $@2                 go to state 89
    Pointer             go to state 13


state 33

   22 DirectDeclarator_a: OpeningSquareBracket . DirectDeclarator_c

    Integer               shift, and go to state 90
    ClosingSquareBracket  shift, and go to state 91

    DirectDeclarator_c  go to state 92


state 34

   19 DirectDeclarator: Identifier $@1 DirectDeclarator_a .

    $default  reduce using rule 19 (DirectDeclarator)


state 35

    3 TransitionUnit_a: ExternalDeclaration TransitionUnit_a .

    $default  reduce using rule 3 (TransitionUnit_a)


state 36

   42 InitDeclarator: Declarator Assign . Initializer

    Integer              shift, and go to state 42
    Identifier           shift, and go to state 43
    Character            shift, and go to state 44
    Real                 shift, and go to state 45
    String               shift, and go to state 46
    OpeningBraces        shift, and go to state 93
    OpeningRoundBracket  shift, and go to state 59
    Increment            shift, and go to state 60
    Decrement            shift, and go to state 61

    Initializer               go to state 94
    ConditionalExpression     go to state 71
    AssignmentExpression      go to state 95
    EqualityExpression        go to state 74
    RelationalExpression      go to state 75
    AdditiveExpression        go to state 76
    MultiplicativeExpression  go to state 77
    Constant                  go to state 78
    UnaryExpression           go to state 79
    PostFixExpression         go to state 80
    PrimaryExpression         go to state 81


state 37

    6 FunctionDefinition: TypeSpecifier Declarator FunctionDefinition_a .

    $default  reduce using rule 6 (FunctionDefinition)


state 38

    8 FunctionDefinition_a: DeclarationList . CompoundStatement

    OpeningBraces  shift, and go to state 25

    CompoundStatement  go to state 96


state 39

    9 FunctionDefinition_a: CompoundStatement .

    $default  reduce using rule 9 (FunctionDefinition_a)


state 40

   36 Declaration: TypeSpecifier Declaration_a EndOfStatement .

    $default  reduce using rule 36 (Declaration)


state 41

   40 InitDeclaratorList: InitDeclaratorList Comma . InitDeclarator

    Identifier  shift, and go to state 1
    Multiply    shift, and go to state 6

    Declarator        go to state 82
    DirectDeclarator  go to state 12
    Pointer           go to state 13
    InitDeclarator    go to state 97


state 42

  115 Constant: Integer .

    $default  reduce using rule 115 (Constant)


state 43

  131 PrimaryExpression: Identifier .

    $default  reduce using rule 131 (PrimaryExpression)


state 44

  116 Constant: Character .

    $default  reduce using rule 116 (Constant)


state 45

  117 Constant: Real .

    $default  reduce using rule 117 (Constant)


state 46

  133 PrimaryExpression: String .

    $default  reduce using rule 133 (PrimaryExpression)


state 47

   77 JumpStatement: BREAK . EndOfStatement
